[tool.poetry]
name = "gyneco"
version = "1.0.0"
description = ""
authors = ["James Standbridge <james.standbridge.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
streamlit = "^1.33.0"
matplotlib = "^3.8.4"
plotly = "^5.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
