[tool.poetry]
name = "gyneco"
version = "1.0.0"
description = ""
authors = ["James Standbridge <james.standbridge.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.13"  # Excluded Python 3.9.7 due to compatibility issues with streamlit
streamlit = "^1.33.0"
matplotlib = "^3.8.4"
plotly = "^5.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
